--- a/amazona/frontend/src/index.css
+++ b/amazona/frontend/src/index.css
@@ -13,7 +13,30 @@ header {
 }
 
 header a {
- color: #ffffff;
- font-weight: bold;
- text-decoration: none;
+  color: #ffffff;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+main {
+  padding: 1rem;
+}
+
+.products {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.product {
+  border: 1px #404040 solid;
+  margin: 1rem;
+}
+.product img {
+  width: 100%;
+  max-width: 16rem;
+}
+
+.product-info {
+  padding: 1rem;
 }
